создание формы для отслеживания заказа

--- a/TrackOrdersclient/app/src/main/AndroidManifest.xml
+++ b/TrackOrdersclient/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:theme="@style/Theme.TrackOrders"
         tools:targetApi="31">
         <activity
+            android:name=".TrackOrderActivity"
+            android:exported="false"
+            android:label="@string/title_activity_track_order"
+             />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
